<?xml version="1.0" encoding="utf-8"?>

<!--
TANGGAL  : 05 MEI 2022
NAMA     : UMAR SAID ADI PRANOTO
NIM      : 10119920
KELAS    : IF10
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_three"
    tools:mContext=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/TextNunitoBold24Black87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="54dp"
            android:layout_marginRight="26dp"
            android:text="@string/check_code_text_title" />

        <TextView
            style="@style/TextRubikRegular15Black87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="26dp"
            android:text="@string/check_code_text_sub" />

        <EditText
            android:id="@+id/edtInputCode"
            style="@style/EditWhiteBorderYellowRubikRegular14Gunmetal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="26dp"
            android:gravity="center"
            android:hint="@string/check_code_edit_hint_voucher"
            android:inputType="textCapCharacters"
            android:textAllCaps="true"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtCheckCodeAgree"
            style="@style/TextRubikRegular12Black87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="26dp"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/check_code_text_agreement" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCheckCode"
            style="@style/ButtonYellowRounded18RubikMedium14Black"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="24dp"
            android:text="@string/check_code_button_get_started"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_lin_border_white"
        android:elevation="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/TextRubikRegular15Black87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/check_code_text_buy" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBuyCode"
            style="@style/ButtonBlueRounded18RubikMedium14White"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="34dp"
            android:text="@string/check_code_button_buy"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>