<?xml version="1.0" encoding="utf-8"?>

<!--
TANGGAL  : 05 MEI 2022
NAMA     : UMAR SAID ADI PRANOTO
NIM      : 10119920
KELAS    : IF10
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_three"
    tools:mContext=".BiodataActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_three"
        android:clipToPadding="false"
        android:padding="26dp"
        tools:context=".view.activation.RegisterFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextGunmetalNunitoBold24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:text="@string/biodata_name" />

            <EditText
                android:id="@+id/edtBiodataName"
                style="@style/EdtWhiteFour15"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/biodata_hint_name_holder"
                android:maxLength="20"
                android:paddingTop="14dp"
                android:paddingBottom="14dp" />

            <TextView
                style="@style/TextGunmetalNunitoBold24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="34dp"
                android:text="@string/biodata_age" />

            <EditText
                android:id="@+id/edtBiodataAge"
                style="@style/EdtWhiteFour15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/biodata_age_holder"
                android:inputType="number"
                android:paddingTop="14dp"
                android:paddingBottom="14dp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBiodataNext"
            style="@style/ButtonYellowRounded18RubikMedium14Black"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/next"
            android:textAllCaps="false" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>