<?xml version="1.0" encoding="utf-8"?>

<!--
TANGGAL  : 05 MEI 2022
NAMA     : UMAR SAID ADI PRANOTO
NIM      : 10119920
KELAS    : IF10
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/bg_white_dialog_rounded"
    android:paddingStart="12dp"
    android:paddingTop="12dp"
    android:paddingEnd="12dp"
    >

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imgWarningDialogInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtWarningDialogTitle"
        android:layout_alignBottom="@+id/txtWarningDialogTitle"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/check_code_warning_empty_title"
        android:src="@drawable/ic_info"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtWarningDialogTitle"
        style="@style/TextBlack87NunitoBold18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/imgWarningDialogInfo"
        android:layout_toRightOf="@+id/imgWarningDialogInfo"
        android:text="@string/check_code_warning_empty_title" />

    <TextView
        android:id="@+id/txtWarningDialogDesc"
        style="@style/TextBlack87RubikRegular12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWarningDialogTitle"
        android:layout_marginTop="6dp"
        android:text="@string/check_code_warning_empty_desc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWarningDialogOk"
        style="@style/ButtonYellowRounded18RubikMedium14Black"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/txtWarningDialogDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="26dp"
        android:text="@string/activation_oke"
        android:textAllCaps="false" />
</RelativeLayout>